--- a/dev/index.html
+++ b/dev/index.html
@@ -16,8 +16,9 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters and states</li><li>Model reparametrization (experimental)</li></ul><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.6.0
   [e30172f5] Documenter v1.11.4
-  [961ee093] ModelingToolkit v9.79.0
-  [220ca800] StructuralIdentifiability v0.5.14 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.11.5
+⌅ [961ee093] ModelingToolkit v9.80.2
+  [220ca800] StructuralIdentifiability v0.5.14 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
+Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.11.5
 Commit 760b2e5b739 (2025-04-14 06:53 UTC)
 Build Info:
   Official https://julialang.org/ release
@@ -39,10 +40,10 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [4c555306] ArrayLayouts v1.11.1
   [a9b6321e] Atomix v1.1.1
   [6e4b80f9] BenchmarkTools v1.6.0
-  [e2ed5e7c] Bijections v0.1.10
+⌅ [e2ed5e7c] Bijections v0.1.10
   [62783981] BitTwiddlingConvenienceFunctions v0.1.6
   [8e7c35d0] BlockArrays v1.6.3
-  [70df07ce] BracketingNonlinearSolve v1.2.0
+  [70df07ce] BracketingNonlinearSolve v1.3.0
   [2a0fbf3d] CPUSummary v0.2.6
   [d360d2e6] ChainRulesCore v1.25.1
   [fb6a15b2] CloseOpenIntervals v0.1.13
@@ -62,8 +63,8 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [9a962f9c] DataAPI v1.16.0
   [864edb3b] DataStructures v0.18.22
   [e2d170a0] DataValueInterfaces v1.0.0
-  [2b5f629d] DiffEqBase v6.174.0
-  [459566f4] DiffEqCallbacks v4.5.0
+  [2b5f629d] DiffEqBase v6.175.0
+  [459566f4] DiffEqCallbacks v4.6.0
   [77a26b50] DiffEqNoiseProcess v5.24.1
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
@@ -76,7 +77,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7c1d4256] DynamicPolynomials v0.6.2
   [06fc5a27] DynamicQuantities v1.8.0
   [4e289a0a] EnumX v1.0.5
-  [f151be2c] EnzymeCore v0.8.8
+  [f151be2c] EnzymeCore v0.8.11
   [e2ba6199] ExprTools v0.1.10
   [55351af7] ExproniconLite v0.10.14
   [7034ab61] FastBroadcast v0.3.5
@@ -110,16 +111,16 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [ae98c720] Jieko v0.2.1
   [98e50ef6] JuliaFormatter v2.1.2
 ⌅ [70703baa] JuliaSyntax v0.4.10
-  [ccbc3e58] JumpProcesses v9.14.3
+  [ccbc3e58] JumpProcesses v9.15.0
   [ba0b0d4f] Krylov v0.10.1
   [b964fa9f] LaTeXStrings v1.4.0
-  [23fbe1c1] Latexify v0.16.7
+  [23fbe1c1] Latexify v0.16.8
   [10f19ff3] LayoutPointers v0.1.17
   [0e77f7df] LazilyInitializedFields v1.3.0
   [5078a376] LazyArrays v2.6.1
   [87fe0de2] LineSearch v0.1.4
   [d3d80556] LineSearches v7.3.0
-  [7ed4a6bd] LinearSolve v3.14.0
+  [7ed4a6bd] LinearSolve v3.16.0
   [2ab3a3ac] LogExpFunctions v0.3.29
   [d8e11817] MLStyle v0.4.17
   [1914dd2f] MacroTools v0.5.16
@@ -127,7 +128,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d0879d2d] MarkdownAST v0.1.2
   [bb5d69b7] MaybeInplace v0.1.4
   [e1d29d7a] Missings v1.2.0
-  [961ee093] ModelingToolkit v9.79.0
+⌅ [961ee093] ModelingToolkit v9.80.2
   [2e0e35c7] Moshi v0.3.5
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.5.9
@@ -135,20 +136,20 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d41bc354] NLSolversBase v7.9.1
   [77ba4419] NaNMath v1.1.3
 ⌅ [2edaba10] Nemo v0.49.5
-  [8913a72c] NonlinearSolve v4.8.0
-  [be0214bd] NonlinearSolveBase v1.9.0
+  [8913a72c] NonlinearSolve v4.9.0
+  [be0214bd] NonlinearSolveBase v1.12.0
   [5959db7a] NonlinearSolveFirstOrder v1.5.0
-  [9a2c21bd] NonlinearSolveQuasiNewton v1.5.0
+  [9a2c21bd] NonlinearSolveQuasiNewton v1.6.0
   [26075421] NonlinearSolveSpectralMethods v1.2.0
   [6fe1bfb0] OffsetArrays v1.17.0
   [429524aa] Optim v1.12.0
-  [bac558e1] OrderedCollections v1.8.0
+  [bac558e1] OrderedCollections v1.8.1
   [90014a1f] PDMats v0.11.35
   [3e851597] ParamPunPam v0.5.2
   [d96e819e] Parameters v0.12.3
   [69de0a69] Parsers v2.8.3
   [e409e4f3] PoissonRandom v0.4.4
-  [f517fe37] Polyester v0.7.17
+  [f517fe37] Polyester v0.7.18
   [1d0040c9] PolyesterWeave v0.2.2
   [85a6dd25] PositiveFactorizations v0.2.4
 ⌅ [aea7be01] PrecompileTools v1.2.1
@@ -168,25 +169,25 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [ae029012] Requires v1.3.1
   [ae5879a3] ResettableStacks v1.1.1
   [79098fc4] Rmath v0.8.0
-  [7e49a35a] RuntimeGeneratedFunctions v0.5.14
+  [7e49a35a] RuntimeGeneratedFunctions v0.5.15
   [9dfe8606] SCCNonlinearSolve v1.2.0
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v2.91.0
-  [19f34311] SciMLJacobianOperators v0.1.5
-⌅ [c0aeaf25] SciMLOperators v0.4.0
+  [0bca4576] SciMLBase v2.96.0
+  [19f34311] SciMLJacobianOperators v0.1.6
+  [c0aeaf25] SciMLOperators v1.3.1
   [53ae85a6] SciMLStructures v1.7.0
   [efcf1570] Setfield v1.1.2
   [727e6d20] SimpleNonlinearSolve v2.5.0
   [699a6c99] SimpleTraits v0.9.4
   [a2af1166] SortingAlgorithms v1.2.1
-  [0a514795] SparseMatrixColorings v0.4.19
+  [0a514795] SparseMatrixColorings v0.4.20
   [276daf66] SpecialFunctions v2.5.1
   [aedffcd0] Static v1.2.0
   [0d7ed370] StaticArrayInterface v1.8.0
   [90137ffa] StaticArrays v1.9.13
   [1e83bf80] StaticArraysCore v1.4.3
   [10745b16] Statistics v1.11.1
-  [82ae8749] StatsAPI v1.7.0
+  [82ae8749] StatsAPI v1.7.1
   [2913bbd2] StatsBase v0.34.5
   [4c63d2b9] StatsFuns v1.5.0
   [7792a7ef] StrideArraysCore v0.5.7
@@ -194,15 +195,15 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [220ca800] StructuralIdentifiability v0.5.14 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [2efcf032] SymbolicIndexingInterface v0.3.40
   [19f23fe9] SymbolicLimits v0.2.2
-  [d1185830] SymbolicUtils v3.27.0
-  [0c5d862f] Symbolics v6.39.1
+  [d1185830] SymbolicUtils v3.29.0
+  [0c5d862f] Symbolics v6.40.0
   [3783bdb8] TableTraits v1.0.1
   [bd369af6] Tables v1.12.0
   [ed4db957] TaskLocalValues v0.1.2
   [8ea1fca8] TermInterface v2.0.0
   [1c621080] TestItems v1.0.0
-  [8290d209] ThreadingUtilities v0.5.3
-  [a759f4b9] TimerOutputs v0.5.28
+  [8290d209] ThreadingUtilities v0.5.4
+  [a759f4b9] TimerOutputs v0.5.29
   [3bb67fe8] TranscodingStreams v0.11.3
   [410a4b4d] Tricks v0.1.10
   [781d530d] TruncatedStacktraces v1.4.0
@@ -277,4 +278,4 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [3f19e933] p7zip_jll v17.4.0+2
 Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.11.4 on <span class="colophon-date" title="Monday 19 May 2025 15:15">Monday 19 May 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.11.4 on <span class="colophon-date" title="Tuesday 3 June 2025 19:14">Tuesday 3 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
