--- a/dev/index.html
+++ b/dev/index.html
@@ -15,10 +15,10 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
   pages   = {194-235}
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters and states</li><li>Model reparametrization (experimental)</li></ul><h2 id="External-tutorials"><a class="docs-heading-anchor" href="#External-tutorials">External tutorials</a><a id="External-tutorials-1"></a><a class="docs-heading-anchor-permalink" href="#External-tutorials" title="Permalink"></a></h2><p>A <a href="https://arxiv.org/abs/2505.10517">tutorial paper</a> describes some of the functionality (identifiability assessment and finding identifiable functions) in the context of epidemiological modeling (tested with the version 0.5.15 of the package).</p><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.6.0
-  [e30172f5] Documenter v1.13.0
-  [961ee093] ModelingToolkit v10.6.0
-  [220ca800] StructuralIdentifiability v0.5.15 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.11.5
-Commit 760b2e5b739 (2025-04-14 06:53 UTC)
+  [e30172f5] Documenter v1.14.1
+  [961ee093] ModelingToolkit v10.10.0
+  [220ca800] StructuralIdentifiability v0.5.15 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.11.6
+Commit 9615af0f269 (2025-07-09 12:58 UTC)
 Build Info:
   Official https://julialang.org/ release
 Platform Info:
@@ -41,7 +41,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [6e4b80f9] BenchmarkTools v1.6.0
   [e2ed5e7c] Bijections v0.2.2
   [62783981] BitTwiddlingConvenienceFunctions v0.1.6
-  [8e7c35d0] BlockArrays v1.6.3
+  [8e7c35d0] BlockArrays v1.7.0
   [70df07ce] BracketingNonlinearSolve v1.3.0
   [2a0fbf3d] CPUSummary v0.2.6
   [d360d2e6] ChainRulesCore v1.25.2
@@ -52,7 +52,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [38540f10] CommonSolve v0.2.4
   [bbf7d656] CommonSubexpressions v0.3.1
   [f70d9fcc] CommonWorldInvalidations v1.0.0
-  [34da2185] Compat v4.16.0
+  [34da2185] Compat v4.17.0
   [b152e2b5] CompositeTypes v0.1.4
   [a33af91c] CompositionsBase v0.1.2
   [2569d6c7] ConcreteStructs v0.2.3
@@ -62,16 +62,16 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [9a962f9c] DataAPI v1.16.0
   [864edb3b] DataStructures v0.18.22
   [e2d170a0] DataValueInterfaces v1.0.0
-  [2b5f629d] DiffEqBase v6.176.0
+  [2b5f629d] DiffEqBase v6.177.2
   [459566f4] DiffEqCallbacks v4.8.0
   [77a26b50] DiffEqNoiseProcess v5.24.1
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-⌅ [a0c0ee7d] DifferentiationInterface v0.6.54
-  [8d63f2c5] DispatchDoctor v0.4.20
+  [a0c0ee7d] DifferentiationInterface v0.7.2
+  [8d63f2c5] DispatchDoctor v0.4.26
   [31c24e10] Distributions v0.25.120
   [ffbed154] DocStringExtensions v0.9.5
-  [e30172f5] Documenter v1.13.0
+  [e30172f5] Documenter v1.14.1
   [5b8099bc] DomainSets v0.7.15
   [7c1d4256] DynamicPolynomials v0.6.2
   [06fc5a27] DynamicQuantities v1.8.0
@@ -100,7 +100,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [615f187c] IfElse v0.1.1
   [3263718b] ImplicitDiscreteSolve v0.1.2
   [d25df0c9] Inflate v0.1.5
-  [18e54dd8] IntegerMathUtils v0.1.2
+  [18e54dd8] IntegerMathUtils v0.1.3
   [8197267c] IntervalSets v0.7.11
   [3587e190] InverseFunctions v0.1.17
   [92d709cd] IrrationalConstants v0.2.4
@@ -120,7 +120,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [5078a376] LazyArrays v2.6.1
   [87fe0de2] LineSearch v0.1.4
   [d3d80556] LineSearches v7.4.0
-  [7ed4a6bd] LinearSolve v3.18.2
+  [7ed4a6bd] LinearSolve v3.19.1
   [2ab3a3ac] LogExpFunctions v0.3.29
   [d8e11817] MLStyle v0.4.17
   [1914dd2f] MacroTools v0.5.16
@@ -128,8 +128,8 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d0879d2d] MarkdownAST v0.1.2
   [bb5d69b7] MaybeInplace v0.1.4
   [e1d29d7a] Missings v1.2.0
-  [961ee093] ModelingToolkit v10.6.0
-  [2e0e35c7] Moshi v0.3.6
+  [961ee093] ModelingToolkit v10.10.0
+  [2e0e35c7] Moshi v0.3.7
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.5.9
   [d8a4904e] MutableArithmetics v1.6.4
@@ -144,12 +144,12 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [6fe1bfb0] OffsetArrays v1.17.0
   [429524aa] Optim v1.13.2
   [bac558e1] OrderedCollections v1.8.1
-  [bbf590c4] OrdinaryDiffEqCore v1.26.1
+  [bbf590c4] OrdinaryDiffEqCore v1.26.2
   [90014a1f] PDMats v0.11.35
   [3e851597] ParamPunPam v0.5.2
   [d96e819e] Parameters v0.12.3
   [69de0a69] Parsers v2.8.3
-  [e409e4f3] PoissonRandom v0.4.4
+  [e409e4f3] PoissonRandom v0.4.5
   [f517fe37] Polyester v0.7.18
   [1d0040c9] PolyesterWeave v0.2.2
   [85a6dd25] PositiveFactorizations v0.2.4
@@ -164,16 +164,16 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [fb686558] RandomExtensions v0.4.4
   [e6cf234a] RandomNumbers v1.6.0
   [3cdcf5f2] RecipesBase v1.3.4
-  [731186ca] RecursiveArrayTools v3.33.0
+  [731186ca] RecursiveArrayTools v3.34.1
   [189a3867] Reexport v1.2.2
   [2792f1a3] RegistryInstances v0.1.0
   [ae029012] Requires v1.3.1
   [ae5879a3] ResettableStacks v1.1.1
   [79098fc4] Rmath v0.8.0
   [7e49a35a] RuntimeGeneratedFunctions v0.5.15
-  [9dfe8606] SCCNonlinearSolve v1.3.0
+  [9dfe8606] SCCNonlinearSolve v1.3.1
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v2.102.1
+  [0bca4576] SciMLBase v2.103.0
   [19f34311] SciMLJacobianOperators v0.1.6
   [c0aeaf25] SciMLOperators v1.3.1
   [431bcebd] SciMLPublic v1.0.0
@@ -199,10 +199,10 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [2efcf032] SymbolicIndexingInterface v0.3.41
   [19f23fe9] SymbolicLimits v0.2.2
   [d1185830] SymbolicUtils v3.29.0
-  [0c5d862f] Symbolics v6.43.0
+  [0c5d862f] Symbolics v6.44.0
   [3783bdb8] TableTraits v1.0.1
   [bd369af6] Tables v1.12.1
-  [ed4db957] TaskLocalValues v0.1.2
+  [ed4db957] TaskLocalValues v0.1.3
   [8ea1fca8] TermInterface v2.0.0
   [1c621080] TestItems v1.0.0
   [8290d209] ThreadingUtilities v0.5.5
@@ -210,7 +210,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [3bb67fe8] TranscodingStreams v0.11.3
   [410a4b4d] Tricks v0.1.10
   [781d530d] TruncatedStacktraces v1.4.0
-  [5c2747f8] URIs v1.6.0
+  [5c2747f8] URIs v1.6.1
   [3a884ed6] UnPack v1.0.2
   [1986cc42] Unitful v1.23.1
   [a7c27f48] Unityper v0.1.6
@@ -224,7 +224,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [856f044c] MKL_jll v2025.0.1+1
   [656ef2d0] OpenBLAS32_jll v0.3.29+0
   [9bd350c2] OpenSSH_jll v10.0.1+0
-  [458c3c95] OpenSSL_jll v3.5.0+0
+  [458c3c95] OpenSSL_jll v3.5.1+0
   [efe28fd5] OpenSpecFun_jll v0.5.6+0
   [f50d1b31] Rmath_jll v0.5.1+0
   [1317d2d5] oneTBB_jll v2022.0.0+0
@@ -281,4 +281,4 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [3f19e933] p7zip_jll v17.4.0+2
 Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.13.0 on <span class="colophon-date" title="Friday 27 June 2025 12:47">Friday 27 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.14.1 on <span class="colophon-date" title="Monday 14 July 2025 21:07">Monday 14 July 2025</span>. Using Julia version 1.11.6.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
